@@ -40,8 +40,8 @@
 	 <para>
 		Entities also present an essentially insurmountable obstacle to quality translation (refer to <xref linkend="sect-Users_Guide-Entities_and_translation" />). Consequently, while we are not reducing the <filename><replaceable>Doc_Name</replaceable>.ent</filename> file's functionality, we are no longer considering requests to add functionality or features associated with entity use. 
 	</para>
-<!--   https://bugzilla.redhat.com/show_bug.cgi?id=604255   -->
-<!--  example>
+<!--    https://bugzilla.redhat.com/show_bug.cgi?id=604255    -->
+<!--   example>
   <title>"Hello world!" in C++</title>
   <programlisting language="C++"><![CDATA[
 #include <qpid/messaging/Connection.h>
@@ -111,7 +111,7 @@ efficient than acknowledging messages individually.</para>
 all senders and receivers managed by each session.</para>
     </callout>
   </calloutlist>
-</example  --> <!--  programlistingco>
+</example   --> <!--   programlistingco>
     <areaspec>
  <area id="index1" coords="2 65"/>
  <area id="index2" coords="3 11"/>
@@ -136,8 +136,8 @@ array.
      </para>
  </callout>
     </calloutlist>
-</programlistingco  --> 
-<!-- 
+</programlistingco   --> 
+<!--  
 <para>
 <equation>
 <title>My MathML example</title>
@@ -151,5 +151,5 @@ array.
 </mml:math>
 </equation>
 </para>
- -->
+  -->
 </preface>
