@@ -77,7 +77,8 @@
   - Fix fop.xconf missing. BZ #831475
   - Fix ID dedupe code for sections. BZ #856555
   - Fix clean_ids changing file perms. BZ #854425
-  - RFE: Drupal 6 support BZ #850635
+  - Added Drupal 6 export. BZ #850635
+  - Fix DocBook5 subtitle support. BZ #850497
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
